add new works experiences

--- a/index.html
+++ b/index.html
@@ -293,10 +293,27 @@
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
 
                 <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
-                    <!-- FREELANCE -->
+                    <!-- VERIFARMA -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018 - Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-aug - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">PHP Developer</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Verifarma</p>
+                            <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
+                            <p>Web services development. Use of MySQL database.</p>
+                            <i class="fas fa-globe"></i> <a href="https://www.verifarma.com/" class="italic hover:text-blue-500">www.verifarma.com</a>
+                        </div>
+                    </div>
+                    <!-- FIN VERIFARMA -->
+
+                    <!-- FREELANCE -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018-jan - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Co-owner / Developer</p>
@@ -306,15 +323,32 @@
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Web design and web applications consultant.</p>
                             <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
-                            <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
+                            <i class="fas fa-globe"></i> <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
                         </div>
                     </div>
                     <!-- FIN FREELANCE -->
 
+                    <!-- ORGANICS -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-jul - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">PHP Developer</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">organics digital</p>
+                            <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
+                            <p>Analysis and development of web services.</p>
+                            <i class="fas fa-globe"></i> <a href="https://www.organics.digital/" class="italic hover:text-blue-500">www.organics.digital</a>
+                        </div>
+                    </div>
+                    <!-- FIN ORGANICS -->
+
                     <!-- OPDS -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-may - 2021-jul</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">PHP Developer</p>
@@ -323,6 +357,7 @@
                             <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
+                            <i class="fas fa-globe"></i> <a href="https://www.opds.gba.gov.ar/" class="italic hover:text-blue-500">www.opds.gba.gov.ar</a>
                         </div>
                     </div>
                     <!-- FIN OPDS -->
@@ -330,7 +365,7 @@
                     <!-- MINISTRY -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">mar-2018 - may-2021</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018-mar - 2021-may</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Accounting Leader</p>
@@ -342,7 +377,7 @@
                         </div>
 
                         <div class="my-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009 - mar-2018</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2009-feb - 2018-mar</p>
                         </div>
                         <div class="mb-4 md:mt-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Administrative Accounting</p>
