update work experience design

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                     <img src="images/jira.png" alt="Logo de Jira" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
-                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                    <p>2.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
@@ -294,9 +294,9 @@
 
                 <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
                     <!-- VERIFARMA -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-aug - Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/aug - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">PHP Developer</p>
@@ -311,9 +311,9 @@
                     <!-- FIN VERIFARMA -->
 
                     <!-- FREELANCE -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018-jan - Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018/jan - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Co-owner / Developer</p>
@@ -329,9 +329,9 @@
                     <!-- FIN FREELANCE -->
 
                     <!-- ORGANICS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-jul - Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/jul - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">PHP Developer</p>
@@ -346,9 +346,9 @@
                     <!-- FIN ORGANICS -->
 
                     <!-- OPDS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-red-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021-may - 2021-jul</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/may - 2021/jul</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">PHP Developer</p>
@@ -363,9 +363,9 @@
                     <!-- FIN OPDS -->
 
                     <!-- MINISTRY -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-red-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018-mar - 2021-may</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2018/mar - 2021/may</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Accounting Leader</p>
@@ -377,7 +377,7 @@
                         </div>
 
                         <div class="my-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2009-feb - 2018-mar</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2009/feb - 2018/mar</p>
                         </div>
                         <div class="mb-4 md:mt-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Administrative Accounting</p>
