update work experience

--- a/index.html
+++ b/index.html
@@ -304,11 +304,28 @@
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">Verifarma</p>
                             <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
-                            <p>Web services development. Use of MySQL database.</p>
-                            <i class="fas fa-globe"></i> <a href="https://www.verifarma.com/" class="italic hover:text-blue-500">www.verifarma.com</a>
+                            <p>Development. Web services. Use of MySQL database, Bitbucket and Jira.</p>
+                            <i class="fas fa-globe"></i> <a href="https://www.verifarma.com/" class="italic hover:text-blue-500" target="_blank">www.verifarma.com</a>
                         </div>
                     </div>
                     <!-- FIN VERIFARMA -->
+
+                    <!-- ORGANICS -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/jul - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">PHP Developer</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">organics digital</p>
+                            <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
+                            <p>Analysis and development of web services.</p>
+                            <i class="fas fa-globe"></i> <a href="https://www.organics.digital/" class="italic hover:text-blue-500" target="_blank">www.organics.digital</a>
+                        </div>
+                    </div>
+                    <!-- FIN ORGANICS -->
 
                     <!-- FREELANCE -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
@@ -323,27 +340,10 @@
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Web design and web applications consultant.</p>
                             <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
-                            <i class="fas fa-globe"></i> <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
+                            <i class="fas fa-globe"></i> <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500" target="_blank">www.headesign.com.ar</a>
                         </div>
                     </div>
                     <!-- FIN FREELANCE -->
-
-                    <!-- ORGANICS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-green-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/jul - Present</p>
-                        </div>
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">PHP Developer</p>
-                        </div>
-                        <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">organics digital</p>
-                            <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
-                            <p>Analysis and development of web services.</p>
-                            <i class="fas fa-globe"></i> <a href="https://www.organics.digital/" class="italic hover:text-blue-500">www.organics.digital</a>
-                        </div>
-                    </div>
-                    <!-- FIN ORGANICS -->
 
                     <!-- OPDS -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border border-red-300 border-l-8 shadow bg-white mt-4 pb-5 md:pt-5">
@@ -357,7 +357,7 @@
                             <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
-                            <i class="fas fa-globe"></i> <a href="https://www.opds.gba.gov.ar/" class="italic hover:text-blue-500">www.opds.gba.gov.ar</a>
+                            <i class="fas fa-globe"></i> <a href="https://www.opds.gba.gov.ar/" class="italic hover:text-blue-500" target="_blank">www.opds.gba.gov.ar</a>
                         </div>
                     </div>
                     <!-- FIN OPDS -->
