--- a/index.html
+++ b/index.html
@@ -299,12 +299,12 @@
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/aug - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">PHP Developer</p>
+                            <p class="font-bold">Developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">Verifarma</p>
                             <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
-                            <p>Development. Web services. Use of MySQL database, Bitbucket and Jira.</p>
+                            <p>PHP Development. Web services. Use of MySQL database, Bitbucket and Jira.</p>
                             <i class="fas fa-globe"></i> <a href="https://www.verifarma.com/" class="italic hover:text-blue-500" target="_blank">www.verifarma.com</a>
                         </div>
                     </div>
@@ -316,12 +316,12 @@
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/jul - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">PHP Developer</p>
+                            <p class="font-bold">Developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">organics digital</p>
                             <!-- <p>(La Plata, Buenos Aires, Argentina)</p> -->
-                            <p>Analysis and development of web services.</p>
+                            <p>PHP. Analysis and development of web services.</p>
                             <i class="fas fa-globe"></i> <a href="https://www.organics.digital/" class="italic hover:text-blue-500" target="_blank">www.organics.digital</a>
                         </div>
                     </div>
@@ -351,12 +351,12 @@
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">2021/may - 2021/jul</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">PHP Developer</p>
+                            <p class="font-bold">Developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
+                            <p>PHP Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
                             <i class="fas fa-globe"></i> <a href="https://www.opds.gba.gov.ar/" class="italic hover:text-blue-500" target="_blank">www.opds.gba.gov.ar</a>
                         </div>
                     </div>
